reorgnize test files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ homepage = "https://github.com/fschutt/fastblur"
 license = "MIT"
 description = "Linear-time gaussian blur"
 
-[dependencies]
-
 [dev-dependencies]
 image = "0.15.0"
-x11-dl = "2.15.0"
+itertools = "0.8.0"
