--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 description = "Linear-time gaussian blur"
 
 [lib]
-crate-type = [ "cdylib" ]
+crate-type = [ "cdylib", "rlib" ]
 
 [profile.release]
 debug = false
@@ -16,7 +16,6 @@ lto = true
 
 [dev-dependencies]
 image = "0.15.0"
-itertools = "0.8.0"
 
 [dependencies]
 wasm-bindgen = "0.2.43"
