update author infos and readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,8 +2,8 @@
 name = "fastblur"
 version = "0.1.0"
 authors = ["Chen Min <chenmin@bestminr.com>", "Felix Schütt <felix.schuett@maps4print.com>"]
-repository = "https://github.com/fschutt/fastblur"
-homepage = "https://github.com/fschutt/fastblur"
+repository = "https://github.com/bestminr/fastblur"
+homepage = "https://github.com/bestminr/fastblur"
 license = "MIT"
 description = "Linear-time gaussian blur"
 
